fix grid spacing for showing multiple rows

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,6 +5,9 @@
   .v-container {
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-compact-s-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-compact-s-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-compact-s-gutter-size / 2);
@@ -14,6 +17,9 @@
     width: tokens.$layout-application-compact-s-content-width;
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-wide-s-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-wide-s-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-wide-s-gutter-size / 2);
@@ -26,6 +32,9 @@
   .v-container {
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-compact-m-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-compact-m-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-compact-m-gutter-size / 2);
@@ -35,6 +44,9 @@
     width: tokens.$layout-application-compact-m-content-width;
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-wide-m-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-wide-m-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-wide-m-gutter-size / 2);
@@ -47,6 +59,9 @@
   .v-container {
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-compact-l-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-compact-l-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-compact-l-gutter-size / 2);
@@ -56,6 +71,9 @@
     width: tokens.$layout-application-compact-l-content-width;
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-wide-l-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-wide-l-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-wide-l-gutter-size / 2);
@@ -68,6 +86,9 @@
   .v-container {
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-compact-xl-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-compact-xl-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-compact-xl-gutter-size / 2);
@@ -77,6 +98,9 @@
     width: tokens.$layout-application-compact-xl-content-width;
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-wide-xl-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-wide-xl-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-wide-xl-gutter-size / 2);
@@ -89,6 +113,9 @@
   .v-container {
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-compact-xxl-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-compact-xxl-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-compact-xxl-gutter-size / 2);
@@ -98,6 +125,9 @@
     width: tokens.$layout-application-compact-xxl-content-width;
     .v-row:not(.v-row--no-gutters) {
       margin: calc(-1 * tokens.$layout-application-wide-xxl-gutter-size / 2);
+      & + .v-row {
+        margin-top: calc(tokens.$layout-application-wide-xxl-gutter-size / 2);
+      }
     }
     .v-row:not(.v-row--no-gutters) > * {
       padding: calc(tokens.$layout-application-wide-xxl-gutter-size / 2);
